# caissify_pairings

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
doc/: ALGORITHM_DESCRIPTION.md  DIVERGENCE_TESTING.md  ENDORSEMENT.md  ENGINE_STATUS.md  FIDE_CONFORMANCE.md  FIDE_ENDORSEMENT_REQUIREMENTS.md  INVESTIGATION_STATUS.md  ROADMAP.md
doc/issue_0_4_3/: CAISSIFY_PAIRINGS_DIVERGENCE.md  repro_engine_divergence.py
scripts/: _javafo.py  compare_edge_weights.py  debug_divergence.py  profile_divergences.py  release.sh  triage_divergences.py
src/caissify_pairings/: __init__.py  __main__.py  base.py  fpc.py  rtg.py  trf.py
src/caissify_pairings/engines/: __init__.py  casual.py  dutch.py  round_robin.py
src/caissify_pairings/schemas/: __init__.py  engine_output.schema.json
tests/: test_baku_acceleration.py  test_casual_engine.py  test_cli.py  test_cross_validation.py  test_dutch_engine.py  test_dutch_fide_official.py  test_dutch_fpc.py  test_dutch_integration.py  test_dutch_javafo.py  test_dutch_pairings_wrapper.py  test_dutch_trf_fixtures.py  test_engine_surface_parity.py  test_output_schema.py  test_round_robin_engine.py  test_rtg.py  test_rtg_fpc_validation.py  test_trf_pending_rounds.py
tests/fixtures/: big_30p11r_even.trf  big_30p11r_varied.trf  large_15p9r_byes.trf  large_15p9r_mixed.trf  large_15p9r_spread.trf  medium_9p7r_clean.trf  medium_9p7r_forfeits.trf  misc_edge_case_1.trf  misc_edge_case_2.trf  misc_edge_case_3.trf  small_7p5r_byes.trf  small_7p5r_clean.trf  small_7p5r_varied.trf  stress_50p15r.trf  stress_50p31r_manybyes.trf
tests/fixtures/fide_official/: bbp_10p5r_s42.trf  bbp_10p5r_s43.trf  bbp_10p5r_s44.trf  bbp_11p5r_s42.trf  bbp_11p5r_s43.trf  bbp_20p7r_s42.trf  bbp_20p7r_s43.trf  bbp_40p9r_s42.trf  bbp_issue7_60p14r.trf
