[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caissify-pairings"
version = "0.1.0"
description = "Pluggable chess tournament pairing engines — FIDE Dutch, Swiss, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Caissify" },
]
keywords = ["chess", "pairing", "fide", "dutch", "swiss", "tournament"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.scripts]
caissify-pairings = "caissify_pairings.__main__:main"
caissify-pairings-check = "caissify_pairings.fpc:main"
caissify-pairings-rtg = "caissify_pairings.rtg:main"

[tool.hatch.build.targets.wheel]
packages = ["src/caissify_pairings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
